--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,9 +35,10 @@ serverapp = "gemma_3_fine_tuning.server_app:app"
 clientapp = "gemma_3_fine_tuning.client_app:app"
 
 [tool.flwr.app.config]
-model.name = "google/gemma-3-4b-it"
+model.name = "google/gemma-3-1b-pt"
 model.quantization = 4
 model.gradient-checkpointing = true
+model.auto-find-modules = true  # Add this line
 model.lora.peft-lora-r = 32
 model.lora.peft-lora-alpha = 64
 train.save-every-round = 5
@@ -57,7 +58,7 @@ train.training-arguments.gradient-checkpointing = true
 train.training-arguments.lr-scheduler-type = "constant"
 strategy.fraction-fit = 1
 strategy.fraction-evaluate = 0.0
-num-server-rounds = 2
+num-server-rounds = 10
 
 [tool.flwr.app.config.static]
 dataset.name = "mlabonne/FineTome-100k"
@@ -70,6 +71,6 @@ default = "gemma3-local-simulation"
 #options.backend.client-resources.num-cpus = 4
 #options.backend.client-resources.num-gpus = 1
 
-address = "0.0.0.0:9093"
+address = "34.121.129.158:9093" #superlink LoadBalancer IP in K8S
 insecure = true
 
